# IndependentStudy

./: .pdm-python  README.md  pyproject.toml
Experiments/: .pdm-python  BasicNetworkTest.py  Config.json  Default.json  GetNetwork.py  Ideas.md  Networks.py  PredictionModule.py  SimpleNetworkDelay.py  TODO.md  h1  h3  h4  main.py  pyproject.toml
Experiments/Configs/: Bus.json  Default.json  RL.json  Random.json  Ring.json  Tree.json
Experiments/Enums/: BBRStage.py  CongestionControlType.py  DeviceType.py  __init__.py
Experiments/Objects/: CongestionControl.py  Device.py  Host.py  Link.py  Network.py  Packet.py  Queue.py  Router.py  __init__.py
Experiments/Results/: Plot.py  h1  h3  h4
Experiments/Results/BBR/: h1  h3  h4
Experiments/Results/Numeric/BBR/: h1  h3  h4
Experiments/Results/Numeric/Reno/: h1  h3  h4
Experiments/Results/Numeric/Vegas/: h1  h3  h4
Experiments/Results/Vegas/: h1  h3  h4
Methodology/: Simulation.md  Structure.drawio
MethodologyRequirements/: ReinforcementRouting.md  Simulation.md
Papers/: Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md  Week_6.md  Week_7.md  Week_8.md
Papers/Before_Summer/: .Surveys.md.swp  Papers.md  Surveys.md  Surveys.txt
