[project]
name = "Experiments"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan", email = "ryhime1@gmail.com"},
]
dependencies = ["networkx>=3.4.2", "simpy>=4.1.1", "matplotlib>=3.10.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
